# mvclab

./: LICENSE  README.md  merge_test.txt  pyproject.toml  rebase_test.txt  requirements.txt  setup.py  test_git_agents.py
mvclab/: __init__.py  cli.py
mvclab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
mvclab/config_files/: .copilotignore  .cursorrules  .gitignore  claude.config.json  codex.config.json  devin.config.json  jules.config.json  v0.config.json
mvclab/git_agents/: __init__.py  branch_manager.py  clone_agent.py  commit_agent.py  conflict_agent.py  history_agent.py  init_repo.py  merge_agent.py  push_pull_agent.py  rebase_agent.py  release_agent.py  review_agent.py  tag_agent.py
mvclab/templates/back-end/: README.md
mvclab/templates/front-end/: README.md
mvclab/templates/shared/: README.md
mvclab/web/: app.py
